bluejay-validator/tests/snapshots/executable_integration_test__error@lone_anonymous_operation.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/lone_anonymous_operation.graphql
---
Error: Anonymous operation not lone operation in document
   ╭─[lone_anonymous_operation.graphql:1:1]
   │
 1 │ ╭─▶ {
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── Anonymous operation definition
───╯
