bluejay-validator/tests/snapshots/executable_integration_test__error@subscription_operation_definition_single_root_field_anonymous.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/subscription_operation_definition_single_root_field_anonymous.graphql
---
Error: Subscription root is not a single field
   ╭─[ subscription_operation_definition_single_root_field_anonymous.graphql:2:14 ]
   │
 2 │ ╭─▶ subscription {
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── Selection set contains multiple fields
───╯
